k8s/base/nextcloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
